xrl-core/main/default/objects/log__c/fields/dateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>dateTimeStamp__c</fullName>
    <label>Date Time Stamp</label>
    <type>DateTime</type>
</CustomField>