xrl-core/main/default/objects/log__c/fields/errCode__c.field-meta.xml
<CustomField>
    <fullName>errCode__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>