xrl-core/main/default/objects/log__c/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>