xrl-core/main/default/objects/log__c/fields/info__c.field-meta.xml
<CustomField>
    <fullName>info__c</fullName>
    <label>Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>