xrl-core/main/default/objects/log__c/fields/operation__c.field-meta.xml
<CustomField>
    <fullName>operation__c</fullName>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>