xrl-core/main/default/objects/log__c/fields/relatedRecord__c.field-meta.xml
<CustomField>
    <fullName>relatedRecord__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + relatedRecordId__c,  relatedRecordName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>