xrl-core/main/default/objects/log__c/fields/relatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>relatedRecordId__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>