xrl-core/main/default/objects/log__c/fields/relatedRecordName__c.field-meta.xml
<CustomField>
    <fullName>relatedRecordName__c</fullName>
    <label>Related Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>