xrl-core/main/default/objects/log__c/fields/rootRecord__c.field-meta.xml
<CustomField>
    <fullName>rootRecord__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + rootRecordId__c, rootRecordName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Root Record</label>
    <type>Text</type>
</CustomField>