xrl-core/main/default/objects/log__c/fields/rootRecordId__c.field-meta.xml
<CustomField>
    <fullName>rootRecordId__c</fullName>
    <label>Root Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>