xrl-core/main/default/objects/log__c/fields/rootRecordName__c.field-meta.xml
<CustomField>
    <fullName>rootRecordName__c</fullName>
    <label>Root Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>